# aauth-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
aauth/: Cargo.toml  README.md
aauth-axum/: Cargo.toml  README.md
aauth-axum/examples/: federated.rs  identity_based.rs  person_server_managed.rs  resource_managed.rs
aauth-axum/examples/support/: mod.rs
aauth-axum/src/: extract.rs  lib.rs  respond.rs
aauth-axum/src/access/: mod.rs  routes.rs
aauth-axum/src/person/: mod.rs  routes.rs
aauth-axum/src/resource/: extract.rs  layer.rs  mod.rs  routes.rs
aauth-axum/tests/: axum_integration.rs  example_flows.rs  federated.rs  fetch_federated_hosted_ps.rs  fetch_person_server.rs  identity_based.rs  person_managed.rs  resource_managed.rs
aauth-axum/tests/support/: agent_issuer.rs  axum_server.rs  client.rs  constants.rs  fetch_cli.rs  harness_access_policy.rs  harness_policy.rs  harness_resource_policy.rs  listen.rs  metadata.rs  mod.rs
aauth-axum/tests/support/apps/: common.rs  federated.rs  identity.rs  mod.rs  person.rs  resource_managed.rs
aauth-hardware-keys/: Cargo.toml  README.md  UPSTREAM_COMMIT  build.rs
aauth-hardware-keys/aauth-macos-se-ffi/: Cargo.toml  build.rs
aauth-hardware-keys/aauth-macos-se-ffi/src/: lib.rs
aauth-hardware-keys/aauth-macos-se-ffi/swift/: SecureEnclaveBridge.swift  main.swift
aauth-hardware-keys/aauth-macos-se-helper/: Cargo.toml
aauth-hardware-keys/aauth-macos-se-helper/src/: lib.rs
aauth-hardware-keys/aauth-macos-se-helper/swift/: main.swift
aauth-hardware-keys/src/: lib.rs  secure_enclave.rs  yubikey_piv.rs
aauth-hardware-keys/swift/: SecureEnclaveBridge.swift
aauth-local-keys/: Cargo.toml  README.md
aauth-local-keys/src/: agent_token.rs  config.rs  create_agent_token.rs  error.rs  keychain.rs  lib.rs  provider.rs  resolve.rs  types.rs
aauth-local-keys/src/backends/: mod.rs
aauth-local-keys/tests/: config_and_resolve.rs
aauth-policy/: Cargo.toml  README.md
aauth-policy/src/: decision.rs  error.rs  lib.rs  policies.rs
aauth-policy/src/access/: mod.rs  policy.rs  service.rs
aauth-policy/src/person/: defer.rs  federation_pending.rs  interaction.rs  mod.rs  policy.rs
aauth-policy/src/resource/: mod.rs  policy.rs  service.rs
aauth-policy/src/store/: memory.rs  mod.rs  ops.rs  records.rs  traits.rs
aauth-reqwest/: Cargo.toml  README.md
aauth-reqwest/src/: access_client.rs  deferred.rs  error.rs  lib.rs  metadata.rs  send.rs  signed.rs  token_exchange.rs
aauth-reqwest/src/middleware/: agent.rs  mod.rs  signing.rs
aauth-reqwest/tests/: sign_roundtrip.rs  whoami_e2e.rs
aauth/examples/: auth_token_challenge.rs  client_direct_grant.rs  direct_agent_grant.rs  federated.rs  identity_based.rs  person_server_managed.rs  resource_managed.rs  verify_agent_token.rs
aauth/examples/shared/: mock_resource.rs  server.rs
aauth/examples/support/: mod.rs
aauth/src/: error.rs  headers.rs  http.rs  http_util.rs  interaction_code.rs  jwt.rs  keys.rs  lib.rs  metadata.rs  signature.rs  types.rs
aauth/src/access_server/: config.rs  keys.rs  mod.rs  outcome.rs  service.rs  token_context.rs
aauth/src/access_server/axum/: routes.rs
aauth/src/agent/: auth.rs  injector.rs  keys.rs  mod.rs  resolve.rs
aauth/src/agent/reqwest/: deferred.rs  metadata.rs  mod.rs  signed.rs  token_exchange.rs
aauth/src/agent/reqwest/middleware/: agent.rs  signing.rs
aauth/src/client/: deferred.rs  fetch.rs  injector.rs  keys.rs  mod.rs  resolve.rs  send.rs  signed.rs  token_exchange.rs
aauth/src/client/middleware/: aauth.rs  mod.rs  signing.rs
aauth/src/client/reqwest/: deferred.rs  metadata.rs  mod.rs  signed.rs  token_exchange.rs
aauth/src/client/reqwest/middleware/: aauth.rs  agent.rs  signing.rs
aauth/src/deferred/: memory.rs  mod.rs  ops.rs  outcome.rs  parse.rs  poll.rs  types.rs  util.rs
aauth/src/jwt/: claims.rs  decode.rs  mint.rs  mod.rs
aauth/src/person_server/: access_client.rs  config.rs  context.rs  defer.rs  federation.rs  federation_pending.rs  interaction.rs  keys.rs  mod.rs  orchestrate.rs  outbound.rs  outcome.rs  service.rs  token_context.rs
aauth/src/person_server/axum/: mod.rs  routes.rs
aauth/src/policy/: access.rs  decision.rs  mod.rs  person.rs  resource.rs  test.rs
aauth/src/protocol/: audit.rs  authorization.rs  common.rs  error.rs  headers.rs  identifiers.rs  interaction.rs  jwt.rs  metadata.rs  mission.rs  mod.rs  pending.rs  permission.rs  signature.rs  token68.rs  token_exchange.rs
aauth/src/resource/: access_context.rs  interaction.rs  keys.rs  mod.rs  mode.rs  no_service.rs  opaque.rs  outcome.rs  service.rs  token.rs
aauth/src/resource/axum/: extract.rs  layer.rs  routes.rs
aauth/src/resource_verify/: audience.rs  mod.rs  verify.rs
aauth/src/server/: interaction.rs  keys.rs  mod.rs  resource_token.rs  verify.rs
aauth/src/server/access/: keys.rs  mod.rs  outcome.rs  service.rs
aauth/src/server/access/axum/: mod.rs  routes.rs
aauth/src/server/axum/: extract.rs  layer.rs  mod.rs  respond.rs  routes.rs
aauth/src/server/deferred/: memory.rs  mod.rs  parse.rs  poll.rs  response.rs  types.rs
aauth/src/server/person/: federation.rs  interaction.rs  keys.rs  mod.rs  orchestrate.rs  outcome.rs  service.rs
aauth/src/server/person/axum/: mod.rs  routes.rs
aauth/src/server/policy/: access.rs  decision.rs  error.rs  mod.rs  person.rs  resource.rs  test.rs
aauth/src/server/resource/: audience.rs  keys.rs  mod.rs  opaque.rs  outcome.rs  policy.rs  service.rs  token.rs  verify.rs
aauth/src/server/resource/axum/: layer.rs  mod.rs  routes.rs
aauth/src/server_axum/: extract.rs  mod.rs  respond.rs
aauth/tests/: axum_integration.rs  example_flows.rs  protocol.rs
aauth/tests/support/: axum_server.rs  client.rs  constants.rs  harness_access_policy.rs  keys.rs  mock_server.rs  mock_transport.rs  mod.rs  timeout.rs
httpsig-key/: Cargo.toml  README.md
httpsig-key/src/: crypto.rs  error.rs  lib.rs  sign.rs  thumbprint.rs  verify.rs
httpsig-key/src/protocol/: headers.rs  jwk.rs  mod.rs  sigkey.rs  signature_error.rs  signature_key.rs
httpsig-key/tests/: sign_verify.rs
(+3 files in other folders)
