[workspace]
resolver = "2"
members = ["aauth"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Lukas Friman <lukas.f@keska.io>"]

[workspace.dependencies]
aauth = { path = "aauth" }
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
http = "1"
jsonwebtoken = { version = "9", default-features = false, features = [
    "use_pem",
] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sfv = "0.14"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
