[workspace]
resolver = "3"
members = [
    "aauth",
    "aauth-axum",
    "aauth-hardware-keys",
    "aauth-hardware-keys/aauth-macos-se-helper",
    "aauth-local-keys",
    "aauth-policy",
    "aauth-reqwest",
    "httpsig-key",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Lukas Friman <lukas.f@keska.io>"]
repository = "https://github.com/keska-labs/aauth-rs"

[workspace.dependencies]
aauth = { path = "aauth", default-features = false }
aauth-axum = { path = "aauth-axum", default-features = false }
aauth-hardware-keys = { path = "aauth-hardware-keys", default-features = false }
aauth-macos-se-helper = { path = "aauth-hardware-keys/aauth-macos-se-helper", default-features = false }
aauth-local-keys = { path = "aauth-local-keys", default-features = false }
aauth-policy = { path = "aauth-policy", default-features = false }
aauth-reqwest = { path = "aauth-reqwest", default-features = false }
keyring = "3"
async-trait = "0.1"
dynosaur = "0.3"
base64 = "0.22"
bytes = "1"
ed25519-dalek = { version = "3.0.0-rc.1", features = [
    "alloc",
    "rand_core",
    "pkcs8",
] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
httpsig = "0.0.24"
httpsig-key = { path = "httpsig-key", default-features = false }
http = "1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
    "use_pem",
    "rust_crypto",
] }
rand = "0.10.1"
rand_core = "0.10.1"
anyhow = "1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
reqwest-middleware = "0.5"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", default-features = false }
sha2 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
trait-variant = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
axum = { version = "0.8", features = ["json"] }
wiremock = "0.6"
rstest = "0.26.1"
