[package]
name = "aauth-axum"
version = "0.0.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Axum integration for the AAuth authorization protocol"
documentation = "https://docs.rs/aauth-axum"
readme = "README.md"
keywords = ["aauth", "oauth", "authentication", "axum"]
categories = ["authentication", "web-programming", "asynchronous"]

[features]
default = ["person-server", "access-server", "resource"]
person-server = ["aauth/person-server"]
access-server = ["aauth/access-server"]
resource = ["aauth/resource"]
policy = ["dep:aauth-policy", "aauth-policy/full"]
full = [
    "person-server",
    "access-server",
    "resource",
    "policy",
    "dep:aauth-reqwest",
]

[dependencies]
aauth = { workspace = true, default-features = false, features = ["deferred"] }
aauth-policy = { workspace = true, optional = true, default-features = false }
aauth-reqwest = { workspace = true, optional = true, features = ["person-server"] }
axum.workspace = true
http.workspace = true
httpsig-key.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
aauth = { workspace = true, default-features = false, features = [
    "agent",
    "person-server",
    "access-server",
    "resource",
] }
aauth-policy = { workspace = true, features = ["full"] }
aauth-reqwest = { workspace = true, features = ["person-server"] }
anyhow.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
rstest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
url.workspace = true

[[example]]
name = "identity_based"
required-features = ["person-server", "access-server", "resource", "policy"]

[[example]]
name = "person_server_managed"
required-features = ["person-server", "access-server", "resource", "policy"]

[[example]]
name = "resource_managed"
required-features = ["person-server", "access-server", "resource", "policy"]

[[example]]
name = "federated"
required-features = ["person-server", "access-server", "resource", "policy"]

[[test]]
name = "identity_based"
required-features = ["full"]

[[test]]
name = "person_managed"
required-features = ["full"]

[[test]]
name = "resource_managed"
required-features = ["full"]

[[test]]
name = "federated"
required-features = ["full"]

[[test]]
name = "fetch_person_server"
required-features = ["full"]

[[test]]
name = "fetch_federated_hosted_ps"
required-features = ["full"]

[package.metadata.docs.rs]
all-features = true
