[package]
name = "aauth-hardware-keys"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
yubikey = { version = "0.8", features = ["untested"] }
der = "0.7"
base64 = "0.22"
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
aauth-macos-se-ffi = { workspace = true }
