[package]
name = "aauth-reqwest"
version = "0.0.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reqwest transport adapter for the AAuth agent client"
documentation = "https://docs.rs/aauth-reqwest"
readme = "../README.md"
keywords = ["aauth", "oauth", "authentication", "reqwest", "http-signatures"]
categories = ["authentication", "web-programming", "asynchronous"]

[features]
default = ["verify"]
verify = ["aauth/resource-verify"]

[dependencies]
aauth = { workspace = true, default-features = false, features = ["agent"] }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true

[dev-dependencies]
aauth = { workspace = true, default-features = false, features = ["agent"] }
tokio.workspace = true

[package.metadata.docs.rs]
all-features = true
