[package]
name = "aauth-reqwest"
version = "0.0.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reqwest transport adapters for the AAuth agent client and Person Server federation"
documentation = "https://docs.rs/aauth-reqwest"
readme = "README.md"
keywords = ["aauth", "oauth", "authentication", "reqwest", "http-signatures"]
categories = ["authentication", "web-programming", "asynchronous"]

[features]
default = []
person-server = ["aauth/person-server"]

[dependencies]
aauth = { workspace = true, default-features = false, features = ["agent"] }
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
dynosaur.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
httpsig-key.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
trait-variant.workspace = true
url.workspace = true

[dev-dependencies]
aauth = { workspace = true, default-features = false, features = ["agent", "person-server"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
rstest.workspace = true
wiremock.workspace = true

[package.metadata.docs.rs]
all-features = true
