[package]
name = "aauth"
version = "0.0.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust implementation of the AAuth authorization protocol"
documentation = "https://docs.rs/aauth"
readme = "README.md"
keywords = ["aauth", "oauth", "authentication", "http-signatures"]
categories = ["authentication", "web-programming"]

[features]
default = [
    "agent",
    "person-server",
    "access-server",
    "resource",
]

# --- Agent ---
# Pulls in resource-verify: agents MUST verify resource-token challenges (spec).
agent = ["resource-verify"]

# --- Shared server infrastructure ---
deferred = []

# --- Resource token verification (no RS service/layer) ---
resource-verify = []

# --- Protocol roles ---
person-server = [
    "deferred",
    "resource-verify",
]
access-server = ["deferred"]
resource = ["deferred", "resource-verify"]

# --- Convenience meta-features ---
server = ["person-server", "access-server", "resource"]
full = [
    "agent",
    "server",
]

[dependencies]
base64.workspace = true
bytes.workspace = true
dynosaur.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
httpsig-key.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sfv.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
aauth-policy = { workspace = true, features = ["person-server"] }
aauth-reqwest = { workspace = true }
tokio.workspace = true
wiremock.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
http-body-util.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
rstest.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true

[package.metadata.docs.rs]
all-features = true
