[package]
name = "httpsig-key"
version = "0.0.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP Signature Keys (draft-hardt-httpbis-signature-key) on top of httpsig"
documentation = "https://docs.rs/httpsig-key"
readme = "README.md"
keywords = ["http-signatures", "rfc9421", "signature-key", "httpsig"]
categories = ["authentication", "web-programming", "cryptography"]

[dependencies]
base64.workspace = true
http.workspace = true
httpsig.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["macros"] }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }

[package.metadata.docs.rs]
all-features = true
