[package]
name = "aauth-macos-se-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unsafe C ABI and Swift build for macOS Secure Enclave (aauth-hardware-keys)"
keywords = ["aauth", "secure-enclave", "ffi", "macos"]
categories = ["cryptography", "os::macos-apis"]

[lib]
crate-type = ["rlib"]
