[package]
name = "aauth-macos-se-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build and locate the codesigned se-helper CLI for macOS Secure Enclave"
keywords = ["aauth", "secure-enclave", "macos"]
categories = ["cryptography", "os::macos-apis"]

[lib]
crate-type = ["rlib"]
