[package]
name = "aauth-macos-se-helper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build and typed client for the codesigned se-helper CLI (macOS Secure Enclave)"
keywords = ["aauth", "secure-enclave", "macos"]
categories = ["cryptography", "os::macos-apis"]

[lib]
crate-type = ["rlib"]

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
